--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,42 +11,22 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: ${{ matrix.container }}
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - container: ghcr.io/oca/oca-ci/py3.6-odoo12.0:latest
-            makepot: "true"
-          - container: ghcr.io/oca/oca-ci/py3.6-ocb12.0:latest
-    services:
-      postgres:
-        image: postgres:9.6
-        env:
-          POSTGRES_USER: odoo
-          POSTGRES_PASSWORD: odoo
-          POSTGRES_DB: odoo
-        ports:
-          - 5432:5432
+        server_version: ["12.0"]
+        client_version: ["14.0"]
     env:
-      PIP_EXTRA_INDEX_URL: "https://wheelhouse.shopinvader.com/simple/"
+      SERVER_VERSION: ${{ matrix.server_version }}
+      CLIENT_VERSION: ${{ matrix.client_version }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - name: Install addons and dependencies
-        run: oca_install_addons
-      - name: Check licenses
-        run: manifestoo -d . check-licenses
-      - name: Check development status
-        run: manifestoo -d . check-dev-status --default-dev-status=Beta
-        continue-on-error: true
-      - name: Initialize test db
-        run: oca_init_test_database
-      - name: Run tests
-        run: oca_run_tests
-      #- uses: codecov/codecov-action@v1
-      ##- name: Update .pot files
-      #  run: oca_export_and_push_pot https://x-access-token:${{ secrets.GIT_PUSH_TOKEN }}@github.com/${{ github.repository }}
-      #  if: ${{ matrix.makepot == 'true' && github.event_name == 'push' && github.repository_owner == 'akretion' }}
-      #
+      - name: Build
+        run: .github/build
+      - name: Init Database
+        run: .github/init-db
+      - name: Run Test
+        run: .github/run
+      - uses: codecov/codecov-action@v2
