--- a/tools/dev.docker-compose.yml
+++ b/tools/dev.docker-compose.yml
@@ -1,10 +1,8 @@
 version: "3.9"
 services:
-  postgres:
-    user: "${UID}:${UID}"
   odoo-server:
-    #volumes:
-      #- ./work/support/project_api:/odoo/support/project_api
+    volumes:
+      - ./work/support/project_api:/odoo/support/project_api
     ports:
       - 9069:8069
   odoo-client:
