[IMP] improve CI config

--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   odoo-client:
     user: "${LOCAL_UID}:${LOCAL_UID}"
     environment:
-      PGDATABASE: dbclient
+      PGDATABASE: "dbclient_${CLIENT_VERSION}"
       DEMO: "True"
       WORKERS: 0
       SERVER_WIDE_MODULES: web
