--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,8 @@ jobs:
         run: ./tools/build
       - name: Init Server Database
         run: ./tools/start-server init-db
+      - name: Start Server in Background
+        run: ./tools/start-server-deamon
       - name: Init Client Database
         run: ./tools/start-client init-db
       - name: Run Client Test
