--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       dockerfile: tools/Dockerfile
       args:
         VERSION: $SERVER_VERSION
+        PYTHON_VERSION: 3.6
         MODULE: project_api
         LOCAL_UID: $LOCAL_UID
     depends_on:
@@ -42,11 +43,11 @@ services:
       dockerfile: tools/Dockerfile
       args:
         VERSION: $CLIENT_VERSION
+        PYTHON_VERSION: $CLIENT_PYTHON_VERSION
         MODULE: project_api_client
         LOCAL_UID: $LOCAL_UID
     depends_on:
       - postgres
-      - odoo-server
     volumes:
       - odoo-client:/data/odoo
       - ../:/odoo/addons
