--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         server_version: ["12.0"]
-        client_version: ["12.0", "14.0"]
+        client_version: ["8.0", "10.0", "12.0", "14.0"]
     env:
       SERVER_VERSION: ${{ matrix.server_version }}
       CLIENT_VERSION: ${{ matrix.client_version }}
