--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        server_version: ["12.0"]
-        client_version: ["14.0"]
+        server_version: ["14.0"]
+        client_version: ["14.0", "12.0", "10.0", "8.0"]
     env:
       SERVER_VERSION: ${{ matrix.server_version }}
       CLIENT_VERSION: ${{ matrix.client_version }}
