--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,16 +1,23 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.1.1
-_src_path: https://github.com/akretion/akretion-addons-repo-template.git
-black_version: 20.8b1
+_commit: v1.11.1
+_src_path: https://github.com/oca/oca-addons-repo-template.git
+ci: GitHub
 dependency_installation_mode: PIP
 generate_requirements_txt: true
+github_check_license: true
+github_enable_codecov: true
+github_enable_makepot: true
+github_enable_stale_action: true
+github_enforce_dev_status_compatibility: true
 include_wkhtmltopdf: false
-odoo_version: '14.0'
-prettify_xml: true
-python_line_length: 88
+odoo_version: 14
+org_name: Akretion
+org_slug: akretion
 rebel_module_groups: []
-repo_description: Support
+repo_description: Support ticket management dealing 2 odoo instance
 repo_name: Support
 repo_slug: support
+repo_website: https://github.com/akretion/support
 travis_apt_packages: []
 travis_apt_sources: []
+
