--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,69 @@
-name: test Odoo addons
+name: tests
 
 on:
   pull_request:
     branches:
-      - "14.0*"
+      - "14*"
   push:
     branches:
-      - "14.0"
+      - "14"
+      - "14-ocabot-*"
 
 jobs:
+  unreleased-deps:
+    runs-on: ubuntu-latest
+    name: Detect unreleased dependencies
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          for reqfile in requirements.txt test-requirements.txt ; do
+              if [ -f ${reqfile} ] ; then
+                  result=0
+                  # reject non-comment lines that contain a / (i.e. URLs, relative paths)
+                  grep "^[^#].*/" ${reqfile} || result=$?
+                  if [ $result -eq 0 ] ; then
+                      echo "Unreleased dependencies found in ${reqfile}."
+                      exit 1
+                  fi
+              fi
+          done
   test:
     runs-on: ubuntu-latest
+    container: ${{ matrix.container }}
+    name: ${{ matrix.name }}
     strategy:
       fail-fast: false
       matrix:
-        server_version: ["14.0"]
-        client_version: ["14.0", "12.0", "10.0", "8.0"]
-    env:
-      SERVER_VERSION: ${{ matrix.server_version }}
-      CLIENT_VERSION: ${{ matrix.client_version }}
+        include:
+          - container: ghcr.io/oca/oca-ci/py3.6-odoo14.0:latest
+            makepot: "true"
+            name: test with Odoo
+          - container: ghcr.io/oca/oca-ci/py3.6-ocb14.0:latest
+            name: test with OCB
+    services:
+      postgres:
+        image: postgres:9.6
+        env:
+          POSTGRES_USER: odoo
+          POSTGRES_PASSWORD: odoo
+          POSTGRES_DB: odoo
+        ports:
+          - 5432:5432
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: Build
-        run: ./tools/build
-      - name: Init Server Database
-        run: ./tools/start-server init-db
-      - name: Start Server in Background
-        run: ./tools/start-server-deamon
-      - name: Init Client Database
-        run: ./tools/start-client init-db
-      - name: Run Client Test
-        run: ./tools/start-client run-test
-      - name: Convert Coverage file
-        run: ./tools/start-client convert-coverage
-      - uses: codecov/codecov-action@v2
+      - name: Install addons and dependencies
+        run: oca_install_addons
+      - name: Check licenses
+        run: manifestoo -d . check-licenses
+      - name: Check development status
+        run: manifestoo -d . check-dev-status --default-dev-status=Beta
+      - name: Initialize test db
+        run: oca_init_test_database
+      - name: Run tests
+        run: oca_run_tests
+      - uses: codecov/codecov-action@v1
+      - name: Update .pot files
+        run: oca_export_and_push_pot https://x-access-token:${{ secrets.GIT_PUSH_TOKEN }}@github.com/${{ github.repository }}
+        if: ${{ matrix.makepot == 'true' && github.event_name == 'push' && github.repository_owner == 'akretion' }}
