--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,16 +1,24 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.1.1
+_commit: v1.14.2
 _src_path: https://github.com/OCA/oca-addons-repo-template.git
-black_version: 20.8b1
+ci: GitHub
 dependency_installation_mode: PIP
 generate_requirements_txt: true
+github_check_license: true
+github_ci_extra_env: {}
+github_enable_codecov: true
+github_enable_makepot: false
+github_enable_stale_action: false
+github_enforce_dev_status_compatibility: false
 include_wkhtmltopdf: false
 odoo_version: 14.0
-prettify_xml: true
-python_line_length: 88
+org_name: Akretion
+org_slug: Akretion
 rebel_module_groups: []
 repo_description: Support
 repo_name: Support
 repo_slug: support
+repo_website: https://github.com/akretion/support
 travis_apt_packages: []
 travis_apt_sources: []
+
