--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,10 @@ name: tests
 on:
   pull_request:
     branches:
-      - "14.0*"
+      - "16.0*"
   push:
     branches:
-      - "14.0"
+      - "16.0"
 
 jobs:
   test:
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         server_version: ["14.0"]
-        client_version: ["16.0", "14.0", "12.0", "10.0", "8.0"]
+        client_version: ["16.0"]
     env:
       SERVER_VERSION: ${{ matrix.server_version }}
       CLIENT_VERSION: ${{ matrix.client_version }}
